syntax = "proto3";

package task.v1;

option go_package = "apisvr/gen/task/v1;taskv1";

message ShowRequest {
  uint64 id = 1;
}
message DeleteRequest {
  uint64 id = 1;
}

enum TaskStatus {
  UNKNOWN_UNSPECIFIED = 0;
  TODO = 1;
  DONE = 2;
}

message TaskResponse {
  uint64 id = 1;
  string name = 2;
  TaskStatus status = 3;
}

message TaskServiceCreateRequest {
  string name = 2;
  TaskStatus status = 3;
}

message TaskServiceUpdateRequest {
  uint64 id = 1;
  string name = 2;
  TaskStatus status = 3;
}

message TaskServiceListRequest {
  uint64 offset = 1;
  uint64 limit = 2;
}

message TaskServiceListResponse {
  uint64 total = 1;
  repeated TaskResponse items = 2;
}

service TaskService {
  rpc List(TaskServiceListRequest) returns (TaskServiceListResponse) {}
  rpc Show(ShowRequest) returns (TaskResponse) {}
  rpc Create(TaskServiceCreateRequest) returns (TaskResponse) {}
  rpc Update(TaskServiceUpdateRequest) returns (TaskResponse) {}
  rpc Delete(DeleteRequest) returns (TaskResponse) {}
}
